Fix image height on mobile

--- a/clipboard-landing-page/src/scss/sections.scss
+++ b/clipboard-landing-page/src/scss/sections.scss
@@ -94,14 +94,13 @@
   margin-top: 186px;
 
   img {
-    width: auto;
-    min-height: 180px;
+    width: 100%;
     margin-top: 65px;
   }
 }
 
 .workflow {
-  margin-top: 160px;
+  margin-top: 130px;
 
   h3 {
     margin-bottom: 18px;
